# ChangeLog for media-libs/libbluray
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-libs/libbluray/ChangeLog,v 1.49 2013/06/25 12:51:43 ago Exp $

*libbluray-0.5.0 (03 Mar 2014)

  03 Mar 2014; Andrew John Hughes <gnu_andrew@member.fsf.org>
  +libbluray-0.5.0.ebuild, libbluray-0.3.0-r1.ebuild:
  Update to 0.5.0. Still not fixed upstream.

  24 Jul 2013; Andrew John Hughes <gnu_andrew@member.fsf.org>
  +files/90libbluray, +libbluray-0.3.0-r1.ebuild, +libbluray-9999.ebuild,
  +metadata.xml:
  Only use IcedTea as relies on sun.* classes.

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libbluray-0.3.0-r1.ebuild:
  Stable for amd64, wrt bug #474238

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libbluray-0.3.0-r1.ebuild:
  Stable for x86, wrt bug #474238

  25 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libbluray-0.3.0-r1.ebuild:
  Stable for ppc64, wrt bug #474238

  24 Jun 2013; Agostino Sarubbo <ago@gentoo.org> libbluray-0.3.0-r1.ebuild:
  Stable for ppc, wrt bug #474238

*libbluray-0.3.0-r1 (03 May 2013)

  03 May 2013; Tim Harder <radhermit@gentoo.org> -libbluray-0.3.0.ebuild,
  +libbluray-0.3.0-r1.ebuild:
  Revbump and remove old. Properly apply java patch (bug #468494) and make
  freetype dep only apply when java is enabled.

  03 May 2013; Samuli Suominen <ssuominen@gentoo.org> libbluray-0.2.2.ebuild,
  libbluray-0.2.3.ebuild, libbluray-0.3.0.ebuild:
  Use http:// instead of ftp:// for fetching the libbluray tarball because of
  checksum failure from ftp://

*libbluray-0.3.0 (03 May 2013)

  03 May 2013; Tim Harder <radhermit@gentoo.org> +libbluray-0.3.0.ebuild:
  Version bump, add truetype use flag.

  16 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libbluray-0.2.3.ebuild:
  Stable for ppc64, wrt bug #450336

  16 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libbluray-0.2.3.ebuild:
  Stable for ppc, wrt bug #450336

  13 Jan 2013; Agostino Sarubbo <ago@gentoo.org> libbluray-0.2.3.ebuild: