@@ -5,25 +5,27 @@ AUX 90libbluray 54 SHA256 6ecc4c3b7d343184f498e029f64ab77c6b779eda4934adef01ba6e
 DIST libbluray-0.3.0-java.patch.bz2 16613 SHA256 491d510330aa0caa4c871ca4c740a6cbb7a0dfac034a503fd4ec7ecb7d0538ea SHA512 8019f76a12d2813e96ca1b0e44a274814ec16d6ea7d921fd8aba4622b27f23d4d2fc2079b51aa7c7750fb6ef408d360c5180c74affc84511520e655f9905504a WHIRLPOOL d47dcc2893c70e49a3e4b6c45fd4915e395d803ad8ce222cf9f72a46535dea2f4e7863d385ece39b3d02aadfd6fdbf8d29b9e63d50c09521544155a34c2ec467
 DIST libbluray-0.3.0.tar.bz2 510993 SHA256 dc73ad618052ddd2d72bb847c8e5b9a1c9175db7b18d0456b21f484836c30038 SHA512 96eedf23ff756e97fa64d9624a49608daccbac169714b9b231a284ed4eb63c77ee2ecbdfc42c311781571146cfa0fe340854ac831d3fe1312131e1742a4a7b02 WHIRLPOOL 524eb047f3d1995820282b89ea1e63ff88868b3d1cfaa7904da61b544e0127d9421ee158e0f6387a0bed8f88bb82dc85e1bb4f2926ed690e074a499ce5579305
 DIST libbluray-0.5.0.tar.bz2 559639 SHA256 19213e193e1abc5ed2de65edfb539deda1dbf6cc64dfef03e405524c9c6f7216 SHA512 bd709a01689bbb03ac291a2544eee93b47d72e065c8ccf825f9fb568ddb339a75a18c721b3c59fd4a8214a0f9b652cbd845bccd9de08248dd4cf61616a77e1dd WHIRLPOOL ab6b422889e6469053f567a489afe6c4cbf79cc1e56461ccad3eec948be819748da7760377686430db212a249b450da8fe5a9c914828f13354135dcf2e314add
+DIST libbluray-0.6.1.tar.bz2 586646 SHA256 bf51c4fb65f4d8b02e9b2708017ecd829c8d0dfa9239bca011e67a2a6e368b3f SHA512 f32f5ce238955efd8d9f34d488d89ca1f52b4dd1f63334ade92dc8e053b15e180549fc5f83f4b7d532c145acb1b8ddfca2230df65451bfb0f77bf6aa2c3806ec WHIRLPOOL bed882bef96effc81241eab736b6be4caa098fdb1e9e2c50bdb70ebfdf0ee53490aed6697bc298c5a8271547113e9c0de151b95198ca2db90733ea70adc4ad44
 EBUILD libbluray-0.3.0-r1.ebuild 2415 SHA256 2c2052985841bf068513eed0411aa9a303c80b278f6e2980a627a30262fb8bff SHA512 b01f07acc93017ed34c3cb7978dcbaf8f0a5c1b9f370b9f574896969bba766b69e8b7db181d42b7b828aaa90f111a84fb431c511e9bcc80b4c22abca7a03aaa0 WHIRLPOOL 3570b3b502951ad76ffe61902502e3ca581e922d66bf13e3dd2ffaaf0be485da6026f9bec26809dfd7c113202f0ec0cedc419c327ede40cdf42d57176fd1c7de
 EBUILD libbluray-0.5.0.ebuild 2170 SHA256 121cf9cdc64ef846494aab522af9076557ca8abfffe882036b0e31ccb526c821 SHA512 f5bbdaa958956b28861fb6e5d415a2289f867342e1d35b4f289ed7c84bdc7ce9d62dfdc3d724de3e8e867e7eec96b68bd076e5d969ee9ea153ef1e0518ec5d82 WHIRLPOOL 32df6ebdf135aa91e309e8ed7790dba75e25dce63bb3d5c597ae50201832bcaced0e36631131a564d8d133e1bc4a09f36fdf1e60ea0eec14f33bd7de6fe807c0
+EBUILD libbluray-0.6.1.ebuild 2493 SHA256 57af7246d24c71e83577b66349f00ff72f3e8d23141bc97d31a12911f1cf2b0c SHA512 bf8ab3f03a68e39d47f1cc708e9d334b1eec8e8a6955dc7222723001090fccd885a52a3b3376afdafd640d11d48b217c4e7f378511f807192f4a342ea4a4bf9c WHIRLPOOL 68af3bbdd2fb8d6b358ad509790ca6cb2ae6ff47701bda165e5873ac14b0b62ee018c097497b18eff580467e236dc0987f92096c4c25f4812563e3982b8aab0c
 EBUILD libbluray-9999.ebuild 1725 SHA256 f4d0703e7bda5464816830b6354bbaad536e425dad5b310bd826214791878a4c SHA512 7430656333bf0fdab1665bc92bbebc9415fb86b4557ec1fed73c84b646a5997ae061594dd6867ff90fc68be687138b6ef978ed6d6ec50f696e1229077a2ab272 WHIRLPOOL 0aec923fa962d97d3b64b930b979256a169e5b30cc7827740ed3be304587eb8702393fc46da6d60bbcc00f5efeaeca88f488f3ef584bc657e669784510f161ec
-MISC ChangeLog 8046 SHA256 302fe1f1a0b3085fea5b843c63c63704e7444a74584fbab9a44fe48d33af3ffd SHA512 c37f1924d37ea2fee9bd3a575babe3402b7fb6b265bb9192a7ed89dfbec8c2325a38f01743d6e226de0ea8d02e70a9a7ef831e2036d8ad9a131fbdae81b2a397 WHIRLPOOL 7d83b2fedf09d1bf795d694a269c2bd37cb62a25e2508611a7e54c2455d07c9cb67beaa2a134fb9765fbdf24f806c15bef131cb4e0c7320c4f2fd01bd7b6d52c
+MISC ChangeLog 8207 SHA256 9020146ee86aaa543e5b8673d2f676b78b299e8e482a347ce4ebd366b8b12f78 SHA512 da6d6819e802a530fbeeb42ce0fe513e01609f7534be3643c58063b20d19bda8a9657fc5de22cba4522a97b0c3364ebcd0207ca1c24a537158058c930ba59574 WHIRLPOOL 0eb1a517ebf39296ad400c8fc77f5d4c9963cee0ea5b18bccd6a761959d8cf0a5cc30d060efb627ecd14d644af9e85ed1aaac6985f22fa55673330356c4dda29
 MISC metadata.xml 365 SHA256 1e26491ee822ce3964caae3db5ea83b2461ac796acef0fcac546f58783ed21a4 SHA512 4328892ef4f4604340f03c55fb55aec4e4b5c1bf50f777b5746bca2ac7431d74ff387137040246f4c0f518538b7a170471e82b6673aa159fdf7f26b19f29c398 WHIRLPOOL 973b6892d3b3f16fd0c2774edd7091665c7d3574a99af6b9d7642292e4dee8fbbf100fb027613b320c8629b4b5d14190c65b3e6db2566b85d2fcad79f28d824d
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.22 (GNU/Linux)
 
-iQIcBAEBCAAGBQJTFKCSAAoJEDuWpXgki9wHbQoP/0Rqvf6BBiRAuS1AuA8Qq+H4
-AL0+fcLfPZhhBYh9wZZ6iFdMO1m+1nMS8efjzvDCZ4ug6llT8Bho4fbKeI90c6zx
-iLJt6uSG95Y4p4GM60ALecRU5xgTHUaOtQAD/80J+MWHZpY9Mcpi/R55v8uJzg1x
-lvxmsANgL52uXP4FLvbAD5n/9FXfGgFn8PZC2kSYGL9IghIga8GMcoHaCqfwFpIx
-XFwdIXzHOFy+PSUiX0QLNW7RDgTtED3vIuE86hyFSw6Efyi50P8jXxXH6JkrFxzR
-zfyTF5k/+n86olLRaM6a3BTT4WkocYNd5yNQFCGV5hGpnr2cAFE0sOheSKXq2KI7
-UCGy44XgpgwEj/R6N2wVLYodxaeGESTydQEz+5EOqQOiN4JHGqRzsN8b3tjc8Xul
-aOFmdCB5RjpcMAOfXkSa3X5i7QGDgb2SI3qRkiprEd+sHD9dK3sDxlZ8p9+eAOT0
-EyQfZznXsSqgkxActF1R8NpRbShjmLUGRfoNJF63TvPm6G0+gQP/d1KAxw6Sff4q
-bUCG1apwKNXmdZK3NLVFY3WZFe54OmvDs4rGPP5XoqyzKp3GmY+LbpcHAMaXYZI2
-tqz/9UaS/1klFmeLmVQRnP+wUVOOysSHjSfJUhbJ4dIihuXIhiVcHLaRLMKPxuvo
-rilviFjltSqjNWPwoDWf
-=MbZU
+iQIcBAEBCAAGBQJT49ORAAoJEDuWpXgki9wH/JsP/3nBP4kcNMqGUpLK0rbF6nFH
+IQYMaHlDWVxz7bVo46jZfxYaZJdRitvdIiODRUHAzslc3UUANBx6K71th3R/o3TE
+3xh2hVlJCJ9Hr58quKFSNDk73Sfyp9DvWhBBZKS9cmJ1JcrFcPtgAjVxc15LscJC
+H5OfslOb75eP8LIDW++sFszXMd5iv5gT5GejfYEGZFPFw8V+JI/zHy5aE1R3aO9j
+1zXxin34M/Tu5hVOvApk/UkgUkPWgy58Wbvvsl20dTpXYBmbWlUGqxJwDpdp6+rK
+/Fjv3JTQIfB/WjJLA7vnEZoXVKF6xOeZ2wv7htBYUsynZdSUxlZP6q9q8LFEb0xC
+qyJvnueEL4piarNhWWiwJxmSu4SomkEJ0r4Vvfu523/p+XfNcVNGDm7hYPVV7/do
+Xx5U5mx4WBfxYWjxt8IhlvH5UZ2cdx9vTj3hYJyla5ksfYrEXM4FpMq1AM1fZj2B
+XIplaUZiCg9ifiuvaUtCLvyC0k2FX7DpBsy+q6V/DOD48dLiLL89PU0b5BD2OfI4
+UG+5rCTAURAqlOJFe2zZAlA3W9AcshWr68cNzhXr4ihlk0Hemm7Kh1c0oiLt90Is
+K3kGIslH9ubTQEmMEvFkNXpxIIWrj0SZM06dSptFNdiiEaFiJ+jIYB6AzFx17hQP
+HRBKuo96xhk45xgZn1tH
+=iHXC
 -----END PGP SIGNATURE-----
