@@ -2,6 +2,12 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: /var/cvsroot/gentoo-x86/media-libs/libbluray/ChangeLog,v 1.49 2013/06/25 12:51:43 ago Exp $
 
+*libbluray-0.6.1 (07 Aug 2014)
+
+  07 Aug 2014; Andrew John Hughes <gnu_andrew@member.fsf.org>
+  +libbluray-0.6.1.ebuild:
+  Update Sun classes JDK fix to 0.6.1.
+
 *libbluray-0.5.0 (03 Mar 2014)
 
   03 Mar 2014; Andrew John Hughes <gnu_andrew@member.fsf.org>
